--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -41,11 +41,15 @@
     "angular-jwt": "^0.1.10",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.1.3",
+    "compass-mixins": "^0.12.10",
     "core-js": "^2.5.7",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "moment": "^2.24.0",
+    "ngx-image-cropper": "^1.3.8",
     "ngx-img-cropper": "^0.11.0",
+    "ngx-mydatepicker": "^2.4.9",
     "ngx-online-status": "^1.0.0",
     "ngx-quill-wrapper": "^7.1.0",
     "popper.js": "^1.14.5",
